<resources>
    <string name="app_name">EBC</string>
    <string name="welcome">Welcome!</string>
    <string name="greeting_title1">Shop Now</string>
    <string name="greeting">Come join us and buy many products UMKM from your home!</string>
    <string name="greeting_title2">Shop anywhere</string>
    <string name="greeting2">Shop anywhere and anytime! </string>
    <string name="greeting_title3">Interesting Product</string>
    <string name="greeting3">See interesting products from UMKM in Bojong Picung! </string>
    <string name="greeting_picture">Greeting picture</string>
    <string name="learn_now">Learn Now!</string>
    <string name="get_started">Get Started</string>
    <string name="sign_out">Sign Out</string>
    <string name="tombol_logout">button logout</string>
    <string name="let_s_register">Let\'s Register</string>
    <string name="do_you_have_an_account_log_in">Do you have an account? log in</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="skip">Skip</string>
    <string name="name_cannot_empty">Name cannot be empty</string>
    <string name="valid_email">Please input a valid email</string>
    <string name="email_cannot_empty">Email cannot be empty</string>
    <string name="phone_cannot_empty">phone cannot be empty</string>
    <string name="password_minimum">Password must consist of minimum 8 characters</string>
    <string name="password_cannot_empty">Password cannot be empty</string>
    <string name="g_check_your_email">Check your Email</string>
    <string name="Login">Login</string>
    <string name="Login_Desc">Please login to continue!</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="not_have_account">Don\'t have an account yet?</string>
    <string name="register_login">Register</string>
    <string name="tv_or">Or</string>
    <string name="login_with">Login with</string>
    <string name="google_account">Google Account</string>
    <string name="logo_ebc">logo ebc</string>
    <string name="illustration_login">Illustration Login</string>
    <string name="success_message_login">Login Account Success</string>
    <string name="failure_message_login">Login Account Failed</string>
    <string name="error_occurred">Oops error occurred</string>
    <string name="register_desc">Please register to create account!</string>
    <string name="hint_register_name">Enter Name</string>
    <string name="hint_register_email">Enter E-mail</string>
    <string name="hint_register_phone">Enter Phone Number</string>
    <string name="hint_register_password">Enter Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="signup_with">Signup with</string>
    <string name="success_message_register">Register Account Success</string>
    <string name="failure_message_register">Register Account Failed</string>
    <string name="g_reset_password">Reset Password</string>
    <string name="g_reset_password_message">We will send you password reset link on your Email</string>
    <string name="g_cancel">Cancel</string>
    <string name="g_send">Send</string>
    <string name="message_reset">Reset link was sent to your email</string>
    <string name="title_activity_shopping">ShoppingActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_search">Search</string>
    <string name="logout">Logout</string>
    <string name="notification_button">notification_button</string>
    <string name="admin_email">admin@example.com</string>
    <string name="email_subject">Help Request</string>
    <string name="best_deals">Best Deals</string>
    <string name="best_products">Best Products</string>
    <string name="help_text">Got a question? We\'re here to answer!</string>
    <string name="want_to_be_seller">Want to be Seller?</string>
    <string name="my_store">My Store</string>
    <string name="track_order">Track Order</string>
    <string name="language">Language</string>
    <string name="personal_info">Personal Info</string>
    <string name="store_name">Store Name</string>
    <string name="address_store">Store Address</string>
    <string name="rekening_number">Bank Number</string>
    <string name="save_data">Save Data</string>
    <string name="cart">Cart</string>
    <string name="productname">ProductName</string>
    <string name="price">Price</string>
    <string name="product_detail">Product detail</string>
    <string name="product_description">Product Description</string>
    <string name="product_stok">Product Stock</string>
    <string name="g_please_select_color">Please select color</string>
    <string name="g_color">Color</string>
    <string name="g_size">Size</string>
    <string name="g_please_select_size">Please select size</string>
    <string name="g_add_to_cart">Add to Cart</string>
    <string name="button_cart">Button Cart</string>
    <string name="buy_now">Buy Now</string>
    <string name="_1">1</string>
    <string name="my_cart">My Cart</string>
    <string name="checkout">Checkout</string>
    <string name="address_location_ex_home">Address location Ex: Home</string>
    <string name="full_name">Full Name</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="phone">Phone</string>
    <string name="Note">Note</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="address_location">Address location Ex: Home</string>
    <string name="addresses">Addresses</string>
    <string name="place_order">Place Order</string>
    <string name="payment_explanation">EBC does not support virtual payments. You can pay when the Seller further contacts you.</string>
    <string name="payment_methods">Payment methods</string>
    <string name="shipping">Shipping</string>
    <string name="total">Total:</string>
    <string name="select_address_error">Select or add new address !</string>
    <string name="payment_failed">Your Order is Failed !</string>
    <string name="payment_success">Your Order is Completed</string>
    <string name="order_error_message">Try again later, if this error keeps showing up please contact us .</string>
    <string name="g_track_order">You can track your order by going to your profile and select all orders then select your recent order.</string>
    <string name="order_details">Order Details</string>
    <string name="order_success_message">We received your order and we will contact you through a phone call in the next 24H
    \n your order number is #</string>
    <string name="place_order_confirmation">Are you sure you want to place this order ?</string>
    <string name="confirm">Confirm</string>
    <string name="order">Order</string>
    <string name="g_order_placed">Order Placed</string>
    <string name="g_shipped">Shipped</string>
    <string name="g_delivered">Delivered</string>
    <string name="settings">Settings</string>
    <string name="edit_personal_details">edit personal details</string>
    <string name="orders">Orders</string>
    <string name="all_orders">All orders</string>
    <string name="track_orders">Track Orders Resi</string>
    <string name="billing">Billing</string>
    <string name="notifications">Notifications</string>
    <string name="regional">Setting</string>
    <string name="old_price">old price</string>
    <string name="g_coming_soon">This feature is not available yet</string>
    <string name="select_profile_image">Select profile image</string>
    <string name="g_cant_change_email_message">You cannot change your email address, if you are looking to change it please contact with us</string>
    <string name="g_no">No</string>
    <string name="g_yes">Yes</string>
    <string name="password_reset">We sent reset password link to your email</string>
    <string name="calculate_shipping_costs">Calculate shipping costs</string>
    <string name="determine_location">Determine the location</string>
    <string name="village">Village</string>
    <string name="desa">Desa</string>
    <string name="subdistrict">Subdistrict</string>
    <string name="province">Province</string>
    <string name="help">Help</string>
    <string name="english">English</string>
    <string name="indonesia">Indonesia</string>
    <string name="delete_item">Delete Item</string>
    <string name="delete_item_cart">Are you sure you want to delete this item from cart ?</string>
    <string name="product_added">Product added to your cart</string>
    <string name="categories">Categories</string>
    <string name="Beauty">Beauty</string>
    <string name="Electronics">Electronics</string>
    <string name="Fashion">Fashion</string>
    <string name="Food">Food</string>
    <string name="Handycrafts">Handycrafts</string>
    <string name="Household">Household</string>
    <string name="become_seller">Fill in the data below to become a seller</string>
    <string name="edit_seller_data">Edit Data Seller</string>
    <string name="hint_register_nameStore">Enter Store Name</string>
    <string name="hint_register_rekening">Enter Rekening</string>
    <string name="product_name">Product Name</string>
    <string name="product_general_information">Product general information:</string>
    <string name="select_product_images">Select Product Images</string>
    <string name="input_product">Input Product</string>
    <string name="see_product">See Product</string>
    <string name="edit_store_details">Edit Store Info</string>
    <string name="edit_data">Edit Data</string>
    <string name="enter_full_address_store">Enter Full Address</string>
    <string name="save_product">Save Product</string>
    <string name="edit_product">Edit Product</string>
    <string name="store_address">Store Address</string>
    <string name="confirmed">Confirmed</string>
    <string name="cancel">Cancel</string>
    <string name="shipped">Shipped</string>
    <string name="delivered">Delivered</string>
    <string name="buyer">Buyer</string>
    <string name="choose_province">Choose Province</string>
    <string name="str_choose_province">- Choose Province -</string>
    <string name="choose_city">- Choose City -</string>
    <string name="postage_fee">Postage Fee :</string>
    <string name="rp0">Rp0</string>
    <string name="destination_city">Destination City</string>
    <string name="origin_city">Origin City</string>
    <string name="weight_gram">Weight (gram)</string>
    <string name="check_postage_fee">Check Postage Fee</string>
    <string name="courier">Courier</string>
    <string name="form_empty">Some Form is Empty!</string>
    <string name="message_error">SOMETHING ERROR : %1$s</string>
    <string name="courier_not_available">Courier %1$s is not available on this origin/destination city</string>
    <string name="hubungi_pembeli">Contact Buyer</string>
    <string name="contact_seller">Contact Seller</string>
    <string name="order_note">Order Note</string>
    <string name="offer_percentage_optional">Offer Percentage</string>
    <string name="pilih_jasa_pengiriman">Select Delivery Service</string>
    <string name="full_delivery_address">Full delivery address</string>
    <string name="harga_ongkir">Postage Price</string>
    <string name="choose_delivery_service">Choose Delivery Service</string>
    <string name="kota_asal">City</string>
    <string name="asal_kota_toko">Shop City</string>
    <string name="berat_barang_gram">Item Weight (grams)</string>
</resources>