<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.shopping.ui.profile.seller.SellerVerificationActivity">

    <EditText
        android:id="@+id/ed_store_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/store_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/ed_address_store"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/address_store"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_store_name"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/ed_rekening_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/rekening_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_address_store"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btn_save_seller_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save_data"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_rekening_number"
        android:layout_marginTop="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>