<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_delete_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/g_reset_password"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <TextView
        android:id="@+id/tv_delete_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/g_reset_password_message"
        android:textColor="@color/black"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_delete_item"
        app:layout_constraintTop_toBottomOf="@id/tv_delete_item" />

    <EditText
        android:id="@+id/edEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/tv_delete_message"
        app:layout_constraintStart_toStartOf="@id/tv_delete_message"
        app:layout_constraintTop_toBottomOf="@id/tv_delete_message"
        android:singleLine="true"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/tv_delete_message"
        app:layout_constraintStart_toStartOf="@+id/tv_delete_message"
        app:layout_constraintTop_toBottomOf="@id/edEmail">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/g_cancel"
            android:textAllCaps="false"
            app:layout_constraintStart_toStartOf="@id/tv_delete_message"
            app:layout_constraintTop_toBottomOf="@id/tv_delete_message" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:background="@color/green"
            android:text="@string/g_send"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@id/tv_delete_message"
            app:layout_constraintTop_toBottomOf="@id/tv_delete_message" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>